--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,13 @@
       <scope>test</scope>
     </dependency>
 
+	<!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
+	<dependency>
+    	<groupId>org.hibernate.validator</groupId>
+    	<artifactId>hibernate-validator</artifactId>
+    	<version>6.0.17.Final</version>
+	</dependency>
+	
 	<!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
 	<dependency>
 		<groupId>org.springframework</groupId>
