--- a/pom.xml
+++ b/pom.xml
@@ -20,13 +20,14 @@
   </properties>
 
   <dependencies>
-    <dependency>
+     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
 
+    
 	<!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
 	<dependency>
     	<groupId>org.hibernate.validator</groupId>
@@ -60,6 +61,14 @@
     <groupId>com.sun.mail</groupId>
     <artifactId>javax.mail</artifactId>
     <version>1.6.0</version>
+</dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+    
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-test</artifactId>
+    <version>5.0.4.RELEASE</version>
+    <scope>test</scope>
 </dependency>
     
     
